Storage&System Design

--- a/.env
+++ b/.env
@@ -1,2 +1,8 @@
 VITE_APPWRITE_PROJECT_ID='66ace1da003495c1f0e2'
 VITE_APPWRITE_URL='https://cloud.appwrite.io/v1'
+VITE_APPWRITE_STORAGE_ID='66ad2317000081c5c772'
+VITE_APPWRITE_DATABASE_ID='66ad5035001d39e603fa'
+VITE_APPWRITE_SAVES_COLLECTION_ID='66ad515600042a4b7d7d'
+VITE_APPWRITE_USERS_COLLECTION_ID='66ad511700096bb3501e'
+VITE_APPWRITE_POSTS_COLLECTION_ID='66ad50c700225eb6b755'
+
